# agentlegatus

./: .ant  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.kiro/specs/agent-legatus/: .config.kiro  design.md  requirements.md  tasks.md
agentlegatus/: __init__.py  exceptions.py
agentlegatus/cli/: __init__.py  main.py
agentlegatus/config/: __init__.py  loader.py  models.py
agentlegatus/core/: __init__.py  event_bus.py  executor.py  graph.py  models.py  postgres_backend.py  recovery.py  redis_backend.py  state.py  workflow.py
agentlegatus/hierarchy/: __init__.py  agent.py  centurion.py  cohort.py  legatus.py
agentlegatus/memory/: __init__.py  base.py  manager.py  redis_backend.py  vector_backend.py
agentlegatus/observability/: __init__.py  benchmark.py  metrics.py  prometheus.py  tracing.py
agentlegatus/providers/: __init__.py  agentscope_provider.py  base.py  langgraph.py  langgraph_provider.py  mock.py  registry.py
agentlegatus/security/: __init__.py  access_control.py  audit.py  http_client.py  pii.py  rate_limiter.py  sanitization.py  validation.py
agentlegatus/tools/: __init__.py  registry.py  tool.py
agentlegatus/utils/: __init__.py  logging.py  retry.py
examples/: basic_workflow.py  benchmark.py  custom_tools.py  event_monitoring.py  provider_switching.py  state_management.py
tests/: __init__.py
tests/integration/: test_benchmark.py  test_end_to_end_workflow.py  test_event_driven_workflow.py  test_provider_switching.py  test_state_backend.py
tests/property/: test_benchmark_properties.py  test_centurion_properties.py  test_cohort_properties.py  test_event_bus_properties.py  test_executor_properties.py  test_graph_properties.py  test_legatus_properties.py  test_memory_properties.py  test_provider_capability_properties.py  test_provider_registry_properties.py  test_retry_properties.py  test_state_manager_properties.py  test_tool_properties.py
tests/unit/: test_access_control.py  test_audit.py  test_benchmark.py  test_centurion.py  test_cli.py  test_config.py  test_data_models.py  test_event_bus.py  test_exceptions.py  test_executor.py  test_graph.py  test_hierarchy.py  test_legatus.py  test_observability.py  test_pii.py  test_postgres_backend.py  test_providers.py  test_rate_limiter.py  test_recovery.py  test_redis_backend.py  test_retry.py  test_secure_http.py  test_security.py  test_state_manager.py  test_tool_registry.py  test_workflow_executor.py
