[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlegatus"
version = "0.1.1"
description = "Vendor-agnostic agent framework abstraction layer - Terraform for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AgentLegatus Contributors"}
]
keywords = ["ai", "agents", "framework", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
all = [
    "agentscope>=0.1.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "asyncpg>=0.28.0",
    "chromadb>=0.4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
]

agentscope = ["agentscope>=0.1.0"]
langgraph = ["langgraph>=0.1.0", "langchain>=0.1.0"]
redis = ["redis>=5.0.0", "aioredis>=2.0.0"]
postgres = ["asyncpg>=0.28.0"]
vector = ["chromadb>=0.4.0"]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.88.0",
]

[project.scripts]
legatus = "agentlegatus.cli.main:cli"

[project.urls]
Homepage = "https://github.com/rajacsp/agentlegatus"
Documentation = "https://agentlegatus.readthedocs.io"
Repository = "https://github.com/rajacsp/agentlegatus"
Issues = "https://github.com/rajacsp/agentlegatus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentlegatus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--timeout=60",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "agentscope.*",
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "redis.*",
    "aioredis.*",
    "asyncpg.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
